@@ -15,6 +15,7 @@ Contributors (Kiwi1):
 
 Contributors (Kiwi2):
 
+    Aaron Spike <aaron@ekips.org>
     Ali Afshar <aafshar@gmail.com>
     Gustavo Sverzut Barbieri <barbieri@gmail.com>
     Gustavo Carneiro <gjc@inescporto.pt>
